kubernetes-manifests/calibre/calibre.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre
  namespace: books
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: calibre
  template:
    metadata:
      labels:
        app: calibre
    spec:
      containers:
        - name: calibre
          image: lscr.io/linuxserver/calibre:latest
          ports:
            - containerPort: 8080
            - containerPort: 8081
          volumeMounts:
            - name: library
              mountPath: /config
            - name: books
              mountPath: /books
      volumes:
        - name: library
          persistentVolumeClaim:
            claimName: calibre-library
        - name: books
          persistentVolumeClaim:
            claimName: calibre-library

---

apiVersion: v1
kind: Service
metadata:
  name: calibre
  namespace: books
spec:
  selector:
    app: calibre
  ports:
    - name: web
      port: 8080
      targetPort: 8080
    - name: content
      port: 8081
      targetPort: 8081

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre
  namespace: books
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: calibre.krugten.org
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - calibre.krugten.org
      secretName: calibre-tls
  rules:
    - host: calibre.krugten.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calibre
                port:
                  number: 8080
